--- a/news.html
+++ b/news.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Leadway Pensure PFA | Social</title>
-    <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
+    <title>Leadway Pensure PFA | News & Events</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,19 +15,27 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    </style>
+    <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:536413,hjsv:5};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+    <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+        (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+    </script>
 </head>
 <body>
-    <!-- fb plugin -->
-    <div id="fb-root"></div>
-    <script>
-        (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
     <!-- Mobile navigation -->
     <nav class="m-style navbar fixed-top hidden-lg-up">
         <div class="button_container" id="toggle">
@@ -189,108 +196,131 @@
             </ul>
         </div>
     </nav>
-    <!-- Body and Main Content of page -->
-    <div class="container-fluid" style="padding-bottom:92px">
+    <!-- Body and Main Content of Page -->
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12" style="background-color:rgb(220, 232, 255)">
-                <div class="row" id="social">
-                    <div class="col-12 col-md-4 text-center">
-                        <h1 class="mOff social-heading"> SOCIAL </h1>
+            <div class="col-12 news-bg">
+                <h1 class="text-center">What's New!</h1>
+                <div class="row">
+                    <div class="col-12 col-md-5 col-lg-4">
+                        <div class="news1">
+
+                        </div>
                     </div>
-                    <div class="col-12 col-md-8">
-                        <ul class="nav nav-tabs nav-fill text-center f-height">
-                            <li class="nav-item ">
-                                <a class="nav-link active f-height" data-toggle="tab" href="#game"> <img class="social-tab" src=images/g-pad.png alt=""> </a>
+                    <div class=" col-12 col-md-7 col-lg-8">
+                        <div class="row other-news">
+                            <div class="col-12 col-lg-6">
+                                <div class="media">
+                                    <img  class="d-flex align-self-center mr-3" src="images/hand.png" alt="leadway Pensure News"/>
+                                    <div class="media-body">
+                                        <h6 class="mt-0">Leadway unveils Mobile App</h6>
+                                        <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                        <a href="#">Read More</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-lg-6">
+                                <div class="media">
+                                    <img  class="d-flex align-self-center mr-3" src="images/vas.png" alt="leadway Pensure News"/>
+                                    <div class="media-body">
+                                        <h6 class="mt-0">Leadway unveils Value Added Services</h6>
+                                        <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                        <a href="#">Read More</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="hidden-md-down col-lg-6">
+                                <div class="media">
+                                    <img  class="d-flex align-self-center mr-3" src="images/vas.png" alt="leadway Pensure News"/>
+                                    <div class="media-body">
+                                        <h6 class="mt-0">Leadway unveils Value Added Services</h6>
+                                        <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                        <a href="#">Read More</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="hidden-md-down col-lg-6">
+                                <div class="media">
+                                    <img  class="d-flex align-self-center mr-3" src="images/hand.png" alt="leadway Pensure News"/>
+                                    <div class="media-body">
+                                        <h6 class="mt-0">Leadway unveils Mobile App</h6>
+                                        <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                        <a href="#">Read More</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 news-sub">
+                        <p class="text-center">All our latest stories & events delivered directly to your inbox</p>
+                        <form class="form-inline">
+                            <div class="form-group mx-auto text-center">
+                                <input type="text" class="form-control" placeholder="E-mail">
+                                <a class="btn btn-outline-purple" role="button" type="submit">Submit</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 news-tab">
+                        <ul class="hidden-sm-down nav nav-fill nav-tabs" id="newsTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#m-news" role="tab"> Recent Stories</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link f-height" data-toggle="tab" href="#facebook">  <img class="social-tab" src=images/facebook.png alt="">    </a>
+                                <a class="nav-link" data-toggle="tab" href="#gall" role="tab"> Gallery </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link f-height" data-toggle="tab" href="#insta"> <img class="social-tab" src=images/instagram.png alt=""> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link f-height" data-toggle="tab" href="#twitter"><img class="social-tab" src=images/twitter.png alt=""> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link f-height" data-toggle="tab" href="#lin"><img class="social-tab" src=images/linkedin.png alt=""> </a>
+                                <a class="nav-link" data-toggle="tab" href="#cald" role="tab"> Calendar </a>
                             </li>
                         </ul>
+                        <form class="hidden-md-up mx-auto">
+                            <div class="form-group text-center">
+                                <select class="form-control" id="m-newsTab" data-aos="fade">
+                                    <option value="0">Recent Stories</option>
+                                    <option value="1">Gallery</option>
+                                    <option value="2">Calender</option>
+                                </select>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 social tab-content">
-                <div class="tab-pane active social-pane game" id="game" role="tabpanel">
-                    <div class="row">
-                        <div class="col-12 col-sm-8">
-                            <div class=>
-                                <div class="col-12 text-center">
-                                    <img class=img-fluid src="images/livew.png" style="margin-top:15%" alt="">
-                                </div>
-                                <div class="col-sm-12" id=g-instruct>
-                                    <ul class="nav nav-tabs nav-fill text-center g-instruct">
-                                        <li class="nav-item  ">
-                                            <a class="nav-link active g-instruct" data-toggle="tab" href="#participate"> How to participate </a>
-                                        </li>
-                                        <li class="nav-item ">
-                                            <a class="nav-link  g-instruct" data-toggle="tab" href="#live">  The Live community </a>
-                                        </li>
-                                        <li class="nav-item  ">
-                                            <a class="nav-link g-instruct one" data-toggle="tab" href="#leaderboard"> Leaderboards </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-12 tab-content text-center">
-                                    <div class="tab-pane active social-pane" id="participate" role="tabpanel" style="height:100px"> </div>
-                                    <div class="tab-pane social-pane" id="live" role="tabpanel" style="height:100px;background-color:blue"> </div>
-                                    <div class="tab-pane social-pane" id="leaderboard" role="tabpanel" style="height:100px;background-color:darkgrey"> </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-12 col-sm-4 text-center">
-                            <img class=img-fluid src="images/screen.png" id=phone alt="">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="tab-pane social-pane" id="facebook" role="tabpanel">
-
-                    <div class="fb-page" data-href="https://www.facebook.com/iNspireleaership.productivity/" data-tabs="timeline,messages,events" data-width="700px" data-height="500px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/iNspireleaership.productivity/" class="fb-xfbml-parse-ignore">
-                        <a href="https://www.facebook.com/iNspireleaership.productivity/">iNspire Leadership</a>
-                    </blockquote>
-                    </div>
-
-                </div>
-                <div class="tab-pane social-pane text-center" id="insta" role="tabpanel">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src=images/insta.gif alt="" class="social-img" style="padding:10px">
-                            <h5 style="color:darkgrey"> Hi there, you too can follow our story. Review our timeline below to get started!  </h5>
-                            <hr class="social-strip">
-                        </div>
-                    </div>
-                    <div class=social-feed id=instafeed > </div>
-                </div>
-                <div class="tab-pane text-center social-pane" id="twitter" role="tabpanel">
+    </div>
+    <div class="container">
+        <div class="row tab-content">
+            <div class="tab-pane fade col-12 active show" role="tabpanel" id="m-news" aria-expanded="true">
+                <div class="row">
                     <div class="col-12">
-                        <img src=images/twit.png alt="" class="social-img" style="padding:10px">
-                        <h5 style="color:darkgrey"> Hi there, you too can follow our story. Review our timeline below to get started!  </h5>
-                        <a class="twitter-follow-button text-center" href="https://twitter.com/LeadwayPensure">
-                            Follow @LeadwayPensurePFA</a>
-                        <hr class="social-strip">
+                        <div class="media">
+                            <img  class="d-flex align-self-center" src="images/hand.png" alt="leadway Pensure News"/>
+                            <div class="media-body">
+                                <h4 class="mt-0">Leadway unveils Mobile App</h4>
+                                <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                <a href="#">Read More</a></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class=social-feed id=twitfeed>
-                        <a class="twitter-grid" data-lang="en" data-limit="9" data-partner="tweetdeck" href="https://twitter.com/OAOD_iNspire/timelines/894512301486870529">leadway test </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <div class="col-12">
+                        <div class="media">
+                            <img  class="d-flex align-self-center" src="images/vas.png" alt="leadway Pensure News"/>
+                            <div class="media-body">
+                                <h4 class="mt-0">Leadway unveils Value Added Services</h4>
+                                <p>Following our master-plan to become a client-oriented brand. We have implemented...
+                                <a href="#">Read More</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="tab-pane social-pane" id="lin" role="tabpanel">
-                    <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-                    <script type="IN/FollowCompany" data-id="7110418" data-counter="top"></script>
-                    <script type="IN/CompanyProfile" data-id="7110418" data-format="inline" data-related="false"></script>
-                </div>
+            </div>
+            <div class="tab-pane fade col-12" role="tabpanel" id="gall" aria-expanded="false">
+                <h1 class="text-center">Gallery Coming Soon!</h1>
+            </div>
+            <div class="tab-pane fade col-12 text-center" role="tabpanel" id="cald" aria-expanded="false">
+                <h1 class="text-center">Calendar Coming Soon!</h1>
             </div>
         </div>
     </div>
@@ -446,21 +476,58 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/instafeed.min.js"></script>
+    <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var feed = new Instafeed({
-            get: 'user',
-            userId: '5841177351',
-            accessToken: '5841177351.1677ed0.1de19abc5aad4ec69d45cf394c997311',
-            clientId: 'fbc60c6a8fc5453caaafd62d806b23ed',
-            resolution: 'low_resolution'
-
-        });
-        feed.run();
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/595a40d350fd5105d0c83b06/default';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+        })();
     </script>
-    <script src="http://s7.addthis.com/js/300/addthis_widget.js" type="text/javascript"></script>
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59878ab10d303b8d"></script>
+    <!--End of Tawk.to Script-->
+    <script src="js/index.js"></script>
+    <script>
+        $(document).ready(function() {
+            //Resize container based on desktop or mobile viewport.
+            var size = window.innerWidth;
+            if (size <= 991) {
+                $(".container").attr("class", "container-fluid");
+            }
+
+            $('#newsTab a[href="' + window.location.hash + '"]').tab('show'); // Select tab by name if provided in location hash
+
+            $('#newsTab a[data-toggle="tab"]').on('shown.bs.tab', function() {
+                if (size < 992 && size >= 768){
+                    $('body,html').animate({
+                        scrollTop :310
+                    }, 1000);
+                }else if (size <= 767) {
+                    $('body,html').animate({
+                        scrollTop :650
+                    }, 1000);
+                } else {
+                    $('body,html').animate({
+                        scrollTop :430
+                    }, 1000);
+                }
+            });
+
+            $("#m-newsTab").change(function () {
+                var i = $(this).val();
+
+                if (i == 0) {
+                    $('a[href="#m_news"]').tab('show');
+                } else if (i == 1) {
+                    $('a[href="#gall"]').tab('show');
+                } else if (i == 2) {
+                    $('a[href="#cald"]').tab('show');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
