--- a/social.html
+++ b/social.html
@@ -257,12 +257,25 @@
                 </div>
 
                 <div class="tab-pane social-pane" id="facebook" role="tabpanel">
-
-                    <div class="fb-page" data-href="https://www.facebook.com/iNspireleaership.productivity/" data-tabs="timeline,messages,events" data-width="700px" data-height="500px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/iNspireleaership.productivity/" class="fb-xfbml-parse-ignore">
+                 <div class=row>
+                    <div class="fb-page col-12 col-sm-6" data-href="https://www.facebook.com/iNspireleaership.productivity/" data-tabs="timeline,messages,events" data-width="700px" data-height="500px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/iNspireleaership.productivity/" class="fb-xfbml-parse-ignore">
                         <a href="https://www.facebook.com/iNspireleaership.productivity/">iNspire Leadership</a>
                     </blockquote>
                     </div>
 
+                    <div class="col-12 col-sm-6"> 
+                       <div class=row> 
+                       <div class= col-12 style="padding:70px;top:62px;"> 
+                         <img src="images/facebook-1.png" class='img-fluid'>
+                       </div>
+                       <h5 class="col-12 text-center" style="color:darkgrey">  Browse our timeline on facebook. Follow our page
+                             to stay updated on our events, recent news and 
+                             peer 2 peer competitions!  </h5>
+                       <div class="fb-like col-12" data-href="https://www.facebook.com/leadwaypensure/" data-width="80px" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+                       </div>
+  
+                    </div>
+                  </div>            
                 </div>
                 <div class="tab-pane social-pane text-center" id="insta" role="tabpanel">
                     <div class="row">
