Update table content on navbar

--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
     </style>
     <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
     <script>
@@ -31,11 +31,21 @@
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+
+        (function() {
+            var cx = '015604166637208106886:5l_cufedmty';
+            var gcse = document.createElement('script');
+            gcse.type = 'text/javascript';
+            gcse.async = true;
+            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(gcse, s);
+        })();
     </script>
     <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>
         (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
-   </script>
+    </script>
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -121,7 +131,7 @@
                     <span> 500,000 </span>
                 </td>
                 <td>
-                   <a href="calculator.html" class="nav-calc"> <img src="images/calc.png"> <span>Calculator</span></a>
+                    <a href="calculator.html" class="nav-calc"> <img src="images/calc.png"> <span>Calculator</span></a>
                 </td>
                 <td>
                     <button type="button" class="btn btn-outline-secondary v-trends"><span>&#8594;</span> VIEW TRENDS </button>
@@ -197,6 +207,7 @@
                 <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="Leadway Logo"></a>
             </ul>
         </div>
+        <gcse:search></gcse:search>
     </nav>
     <!-- Body and Main Content of page -->
     <div class="container-fluid">
@@ -316,17 +327,17 @@
             <div class="col-12 col-lg-6 intro-box text-center">
                 <h3 class="hidden-md-down"> Leadway Pensure PFA is...</h3>
                 <p> ...totally committed to ensuring we provide that value. We pride
-                ourselves on the fact that we will generate enviable investment returns,
-                making sure that your retirement nest egg grows within the boundaries
-                of our economy. Our commitment to value means that we are also
-                committed to providing excellent service to you at all times </p>
+                    ourselves on the fact that we will generate enviable investment returns,
+                    making sure that your retirement nest egg grows within the boundaries
+                    of our economy. Our commitment to value means that we are also
+                    committed to providing excellent service to you at all times </p>
                 <a href="company.html" class="btn btn-outline-blue-sm"> About us </a>
             </div>
         </div>
         <div class="row message-box-container">
             <div class="col-12 col-md-5  message-box text-center">
                 <p class="message-box">Over the last decade, we’ve spread to over 25 branches nationwide
-                servicing over 500,000 RSA accounts.</p>
+                    servicing over 500,000 RSA accounts.</p>
             </div>
             <div class="col-12 col-md-7 solutions hidden-sm-down text-center">
                 <h5> Some frequently asked questions </h5>
@@ -386,18 +397,18 @@
                     <h3 class="hidden-md-down">"I am at the peak of my career."</h3>
                     <h5 class="hidden-lg-up">"I am at the peak of my career."</h5>
                     <p class="text-justify">Enroll today for a pension plan with Leadway Pensure PFA where you will be
-                    guaranteed high quality services, enviable returns on investment and the opportunity to engage with
-                    our very experienced customer relationship managers. Don't forget to visit our investment page for
-                    tips on wealth creation, sustenance and more.</p>
+                        guaranteed high quality services, enviable returns on investment and the opportunity to engage with
+                        our very experienced customer relationship managers. Don't forget to visit our investment page for
+                        tips on wealth creation, sustenance and more.</p>
                     <a href="#" class="btn btn-purple">Enroll Now</a>
                 </div>
                 <div id="retr-txt">
                     <h3 class="hidden-md-down">"About to retire?"</h3>
                     <h5 class="hidden-lg-up">"About to retire?"</h5>
                     <p class="text-justify">If you are considering retirement or accessing your benefits, Leadway Pensure
-                    can help make the process seamless and stress free. We will work with you from the point of application
-                    through all necessary approvals until final payments are made, ensuring prompt payment and real-time
-                    notification of the status of your application throughout the process.</p>
+                        can help make the process seamless and stress free. We will work with you from the point of application
+                        through all necessary approvals until final payments are made, ensuring prompt payment and real-time
+                        notification of the status of your application throughout the process.</p>
                     <a href="services.html" class="btn btn-purple">Learn more</a>
                 </div>
             </div>
@@ -484,8 +495,8 @@
                             <h3 class="hidden-md-down text-center">360&deg; Digital</h3>
                             <h5 class="hidden-lg-up text-center">360&deg; Digital</h5>
                             <p class="text-justify">Enjoy exciting content and keep customers update through our social channels. Engage customer care for
-                            more information on our products and services or catch up with live programmes featuring our seasoned professionals
-                            on how to tackle everyday financial problems.</p>
+                                more information on our products and services or catch up with live programmes featuring our seasoned professionals
+                                on how to tackle everyday financial problems.</p>
                             <ul class="nav nav-justified hidden-sm-down">
                                 <li class="nav-item">
                                     <a class="nav-link" href="#"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
@@ -550,7 +561,7 @@
                     <h5 class="hidden-md-down text-center">No matter who you are or where you may be, we have a plan for you !</h5>
                     <h6 class="hidden-lg-up text-center">No matter who you are or where you may be, we have a plan for you !</h6>
                     <p class="text-justify">Are you graduating, employed, about to retire? or retired, Our four tier solutions strategy ensures
-                    we can appeal to every consumer segment within the market place. Let's walk you through a plan </p>
+                        we can appeal to every consumer segment within the market place. Let's walk you through a plan </p>
                     <div class="text-center"><a href="contact.html" class="btn btn-outline-white">Talk to Leadway</a></div>
                 </div>
                 <div class="hidden-sm-down" id="s8-pic" data-aos="fade-left"><img src="images/mobile.png" alt=""></div>
@@ -561,7 +572,7 @@
                 <div class="hidden-sm-down reg-pic float-left"  data-aos="fade"><img src="images/jar.png" alt=""></div>
                 <div class="reg-txt float-right">
                     <p class="v-align text-center">Need a pension account today?<br>
-                    Register with the <span style="color: #2068a6;">Leading</span> PFA today</p>
+                        Register with the <span style="color: #2068a6;">Leading</span> PFA today</p>
                     <div class="hidden-md-up text-center"><a href="enroll.html" class="btn btn-outline-blue">Get Started</a></div>
                     <span class="hidden-sm-down reg-btn v-align"><a href="enroll.html" class="btn btn-outline-blue">Get Started</a></span>
                 </div>
