--- a/news.html
+++ b/news.html
@@ -104,7 +104,7 @@
                     </div>
                 </td>
                 <td>
-                    <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 0800-Pesnure</span>
+                    <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 080-Pensure</span>
                 </td>
                 <td>
                     <span class="head-td"> RSA FUNDS</span><br>
