--- a/index.html
+++ b/index.html
@@ -78,14 +78,6 @@
                         <li><a href="faq.html">FAQs</a></li>
                     </ul>
                 </li>
-                <li><a data-toggle="collapse" href="#lang" aria-expanded="false" aria-controls="lang">Select Language <i class="fa fa-chevron-down"></i></a>
-                    <ul class="sub-menu collapse" id="lang">
-                        <li><a href="#">English</a></li>
-                        <li><a href="#">Yoruba</a></li>
-                        <li><a href="#">Igbo</a></li>
-                        <li><a href="#">Hausa</a></li>
-                    </ul>
-                </li>
             </ul>
         </div>
     </nav>
@@ -96,14 +88,7 @@
             <tbody>
             <tr>
                 <td>
-                    <div class="form-group">
-                        <select class="form-control language">
-                            <option>English</option>
-                            <option>Yoruba</option>
-                            <option>Hausa</option>
-                            <option>Igbo</option>
-                        </select>
-                    </div>
+                    <div id="google_translate_element"></div>
                 </td>
                 <td>
                     <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 080-Pensure</span>
@@ -734,6 +719,12 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,ha,ig,yo'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/index.js"></script>
     <script>
         //Resize container based on desktop or mobile viewport.
