Blog Page is done, and navbar update accross all pages

--- a/enroll.html
+++ b/enroll.html
@@ -44,11 +44,11 @@
                         <span> &#8358;2.3433 <img src="images/neg.png" alt=""></span>
                     </td>
                     <td>
-                        <span class="head-td">RSA ADMIN FEE</span><br>
-                        <span> &#8358;100 </span>
+                        <span class="head-td">RSA ACCOUNTS </span><br>
+                        <span> 500,000 </span>
                     </td>
                     <td>
-                        <img src="images/calc.png"><span>Calculator</span>
+                        <a href="calculator.html" class="nav-calc"> <img src="images/calc.png"> <span>Calculator</span></a>
                     </td>
                     <td>
                         <button type="button" class="btn btn-outline-secondary v-trends"><span>&#8594;</span> VIEW TRENDS </button>
