--- a/token.html
+++ b/token.html
@@ -31,7 +31,7 @@
                         <div id="google_translate_element"></div>
                     </td>
                     <td>
-                        <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 0800-Pensure</span>
+                        <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 080-Pensure</span>
                     </td>
                     <td>
                         <span class="head-td"> RSA FUNDS</span><br>
@@ -42,11 +42,11 @@
                         <span> &#8358;2.3433 <img src="images/neg.png" alt=""></span>
                     </td>
                     <td>
-                        <span class="head-td">RSA ADMIN FEE</span><br>
-                        <span> &#8358;100 </span>
+                        <span class="head-td">RSA ACCOUNTS </span><br>
+                        <span> 500,000 </span>
                     </td>
                     <td>
-                        <img src="images/calc.png"><span>Calculator</span>
+                        <a href="calculator.html" class="nav-calc"> <img src="images/calc.png"> <span>Calculator</span></a>
                     </td>
                     <td>
                         <button type="button" class="btn btn-outline-secondary v-trends"><span>&#8594;</span> VIEW TRENDS </button>
