--- a/faq.html
+++ b/faq.html
@@ -61,13 +61,14 @@
                     <ul class="sub-menu collapse" id="med">
                         <li><a href="news.html">News & Events</a></li>
                         <li><a href="social.html">Social</a></li>
-                        <li><a href="downloads.html">Downloads</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </li>
                 <li><a data-toggle="collapse" href="#cont" aria-expanded="false" aria-controls="cont">Contact Us <i class="fa fa-chevron-down"></i></a>
                     <ul class="sub-menu collapse" id="cont">
                         <li><a href="contact.html">Branch Network</a></li>
                         <li><a href="faq.html">FAQs</a></li>
+                        <li><a href="downloads.html">Downloads</a></li>
                     </ul>
                 </li>
             </ul>
@@ -161,7 +162,7 @@
                         <a class="dropdown-item" href="news.html#cald"><i class="fa fa-chevron-right" aria-hidden="true"></i> Calender</a>
                         <a class="dropdown-item" href="news.html#gall"><i class="fa fa-chevron-right" aria-hidden="true"></i> Gallery</a>
                         <a class="dropdown-item" href="social.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Social</a>
-                        <a class="dropdown-item" href="downloads.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Downloads</a>
+                        <a class="dropdown-item" href="blog.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Blog</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -169,6 +170,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="co">
                         <a class="dropdown-item" href="contact.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Branch Network</a>
                         <a class="dropdown-item" href="faq.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> FAQs</a>
+                        <a class="dropdown-item" href="downloads.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Downloads</a>
                     </div>
                 </li>
                 <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="Leadway Logo"></a>
@@ -221,23 +223,6 @@
                             </h5>
                         </div>
                         <div id="emp3" class="collapse" role="tabpanel" aria-labelledby="gen3">
-                            <div class="card-block">
-                                The RSA belongs to you and therefore a change in employer does not affect it as it is transferrable from one
-                                employer to another. For your pension remittance to continue, please inform your new employer of your pension
-                                details including your RSA number (PENCOM PIN), the name of your PFA and PFC details. It is very important that
-                                you inform the PFA whenever your details change to enable your records to be updated on our database.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header" role="tab" id="gen4">
-                            <h5 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion7" href="#emp4" aria-expanded="false" aria-controls="emp4">
-                                    What happens to my RSA and contributions when I change employers?
-                                </a>
-                            </h5>
-                        </div>
-                        <div id="emp4" class="collapse" role="tabpanel" aria-labelledby="gen4">
                             <div class="card-block">
                                 The RSA belongs to you and therefore a change in employer does not affect it as it is transferrable from one
                                 employer to another. For your pension remittance to continue, please inform your new employer of your pension
