--- a/social.html
+++ b/social.html
@@ -60,13 +60,14 @@
                     <ul class="sub-menu collapse" id="med">
                         <li><a href="news.html">News & Events</a></li>
                         <li><a href="social.html">Social</a></li>
-                        <li><a href="downloads.html">Downloads</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </li>
                 <li><a data-toggle="collapse" href="#cont" aria-expanded="false" aria-controls="cont">Contact Us <i class="fa fa-chevron-down"></i></a>
                     <ul class="sub-menu collapse" id="cont">
                         <li><a href="contact.html">Branch Network</a></li>
                         <li><a href="faq.html">FAQs</a></li>
+                        <li><a href="downloads.html">Downloads</a></li>
                     </ul>
                 </li>
             </ul>
@@ -79,9 +80,7 @@
             <tbody>
             <tr>
                 <td>
-                    <div class="form-group">
-                        <div id="google_translate_element"></div>
-                    </div>
+                    <div id="google_translate_element"></div>
                 </td>
                 <td>
                     <span><i class="fa fa-phone" aria-hidden="true" style="color: #2068a4"></i> 080-Pensure</span>
@@ -162,7 +161,7 @@
                         <a class="dropdown-item" href="news.html#cald"><i class="fa fa-chevron-right" aria-hidden="true"></i> Calender</a>
                         <a class="dropdown-item" href="news.html#gall"><i class="fa fa-chevron-right" aria-hidden="true"></i> Gallery</a>
                         <a class="dropdown-item" href="social.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Social</a>
-                        <a class="dropdown-item" href="downloads.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Downloads</a>
+                        <a class="dropdown-item" href="blog.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Blog</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -170,6 +169,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="co">
                         <a class="dropdown-item" href="contact.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Branch Network</a>
                         <a class="dropdown-item" href="faq.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> FAQs</a>
+                        <a class="dropdown-item" href="downloads.html"><i class="fa fa-chevron-right" aria-hidden="true"></i> Downloads</a>
                     </div>
                 </li>
                 <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="Leadway Logo"></a>
