Updated Blog Navigation, badges and date placeholders

--- a/news.html
+++ b/news.html
@@ -190,12 +190,14 @@
                 <h1 class="text-center">What's New!</h1>
                 <div class="row">
                     <div class="col-12 col-sm-10 col-md-5 col-lg-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
                         <div class="news1">
                             <div class="news1-txt">
                                 <p>Forex Trading for dummies</p>
                                 <a href="#" class="btn btn-primary">Learn more</a>
                             </div>
                         </div>
+                        <span class="news-date">21st Aug, 2017</span>
                     </div>
                     <div class="col-12 col-sm-11 col-md-7 col-lg-8 mx-auto">
                         <div class="row other-news">
@@ -288,36 +290,48 @@
                         <h2>Recent releases</h2>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
                         </figure>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
                         </figure>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
                         </figure>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
                         </figure>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
                         </figure>
                     </div>
                     <div class="col-10 col-sm-6 col-md-4 mx-auto">
+                        <span class="badge badge-info">News & Events</span>
+                        <span class="news-date">21st Aug, 2017</span>
                         <figure>
                             <img src="images/sheet.jpg"/>
                             <figcaption><h5>Building an efficient self-management system</h5></figcaption>
