finalising mailchimp integrations

--- a/career.html
+++ b/career.html
@@ -362,7 +362,7 @@
                                 <p style="margin-top: 1rem; font-weight: 300">Want regular updates on job openings and personal development tips</p>
                                 <p>Sign Up for our news-letter</p>
                                 <!-- Begin MailChimp Signup Form -->
-                                <div id="mc_embed_signup" class="text-center">
+                                <div id="mc_embed_signup" class="news-bg text-center">
                                     <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="post">
                                        <input type="hidden" name="u" value="a7d286c921166498a0b699255">
                                         <input type="hidden" name="id" value="47a1abe4d1">
